# df-data-quality-ml

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
cfg/: api_log.ini  config_dev.yaml
dqml_app/: __main__.py  dataset.py  dqml_app.py  dqml_app_api.py  dqml_app_cli.py  dqml_app_core.py  dqml_app_old.py  settings.py
dqml_app/api_data/: datasets.json
dqml_app/app_calendar/: eff_date.py
dqml_app/cfg/: api_log.ini  config_dev.yaml  dqml_app_api_log.ini
dqml_app/data/: acct_positions_20241226.csv
dqml_app/data_access/: sample.py
dqml_app/data_sample/: sample.py
dqml_app/explainability/: explain.py
dqml_app/feature_eng/: features.py
dqml_app/utils/: file_io.py  logger.py  misc.py
scripts/: dqml_app
src/dqml_app/: dqml_app_api.py  dqml_app_cli.py  dqml_app_core.py  settings.py
src/dqml_app/data_sample/: sample.py
src/dqml_app/explainability/: explain.py
src/dqml_app/feature_eng/: features.py
